# wtmux

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  TODO.md  install.ps1  uninstall.ps1
.claude/: settings.local.json
.github/workflows/: release.yml
crates/wtmux-client/: Cargo.toml
crates/wtmux-client/src/: input_handler.rs  main.rs
crates/wtmux-common/: Cargo.toml
crates/wtmux-common/src/: error.rs  ipc.rs  lib.rs  protocol.rs
crates/wtmux-config/: Cargo.toml
crates/wtmux-config/src/: config.rs  keybindings.rs  lib.rs  options.rs  parser.rs
crates/wtmux-layout/: Cargo.toml
crates/wtmux-layout/src/: geometry.rs  lib.rs
crates/wtmux-pty/: Cargo.toml
crates/wtmux-pty/src/: conpty.rs  lib.rs  process.rs
crates/wtmux-server/: Cargo.toml
crates/wtmux-server/src/: command_executor.rs  copymode.rs  main.rs  pane.rs  pastebuffer.rs  renderer.rs  server.rs  session.rs  window.rs
crates/wtmux-terminal/: Cargo.toml
crates/wtmux-terminal/src/: cell.rs  grid.rs  lib.rs  parser.rs  scrollback.rs  statusbar.rs  terminal.rs
scoop/: wtmux.json
wix/: main.wxs
