[package]
name = "wtmux-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
windows-sys = { workspace = true }
